<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_company_name"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_company_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_company_vale"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_company_name"
        app:layout_constraintTop_toTopOf="@id/tv_company_name"/>

    <TextView
        android:id="@+id/tv_location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_location_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_company_name"
        app:layout_constraintTop_toBottomOf="@id/tv_company_value" />

    <TextView
        android:id="@+id/tv_location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_location_value"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/tv_location_name"
        app:layout_constraintTop_toTopOf="@id/tv_location_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_location_name"/>

    <TextView
        android:id="@+id/tv_position_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_position_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_company_name"
        app:layout_constraintTop_toBottomOf="@id/tv_location_value" />

    <TextView
        android:id="@+id/tv_position_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_position_value"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/tv_position_name"
        app:layout_constraintTop_toTopOf="@id/tv_position_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_position_name"/>

    <TextView
        android:id="@+id/tv_duration_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_duration_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_company_name"
        app:layout_constraintTop_toBottomOf="@id/tv_position_value" />

    <TextView
        android:id="@+id/tv_duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_duration_value"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/tv_duration_name"
        app:layout_constraintTop_toTopOf="@id/tv_duration_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_duration_name"/>

    <TextView
        android:id="@+id/tv_description_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_work_description_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_company_name"
        app:layout_constraintTop_toBottomOf="@id/tv_duration_value" />

    <TextView
        android:id="@+id/tv_description_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_work_description_value"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_description_name"
        app:layout_constraintTop_toTopOf="@id/tv_description_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#595959"
        app:layout_constraintTop_toBottomOf="@id/tv_description_value"/>
</androidx.constraintlayout.widget.ConstraintLayout>